# ChangeLog for sci-libs/proj
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/proj/ChangeLog,v 1.15 2009/09/23 20:09:36 patrick Exp $

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> proj-4.4.9.ebuild:
  Remove virtual/libc

  14 Sep 2009; Patrick Lauer <patrick@gentoo.org> proj-4.6.1.ebuild,
  +files/proj-4.6.1-test.patch:
  Fixing test failure, closes #284828. Thanks to Kacper Kowalik for
  extracting the patch from upstream.

*proj-4.6.1 (11 Sep 2008)

  11 Sep 2008; <djay@gentoo.org> +proj-4.6.1.ebuild:
  Version bump

  08 Jan 2008; Sébastien Fabbro <bicatali@gentoo.org> proj-4.5.0.ebuild:
  Added unzip dependency (bug #204866)

*proj-4.6.0 (04 Jan 2008)

  04 Jan 2008; Sébastien Fabbro <bicatali@gentoo.org> +proj-4.6.0.ebuild:
  Version bump

*proj-4.5.0 (24 Nov 2006)

  24 Nov 2006; <djay@gentoo.org> +proj-4.5.0.ebuild:
  Version bump

  25 May 2006; Jeroen Roovers <jer@gentoo.org> proj-4.4.9.ebuild:
  Marked stable on hppa (bug #98593).

  16 Sep 2005; Aron Griffis <agriffis@gentoo.org> proj-4.4.9.ebuild:
  Mark 4.4.9 stable on alpha

  13 Aug 2005; Michael Hanselmann <hansmi@gentoo.org> proj-4.4.9.ebuild:
  Stable on ppc.

  11 Jul 2005; Markus Rothe <corsair@gentoo.org> proj-4.4.9.ebuild:
  Stable on ppc64 (bug #98593)

  10 Jul 2005; Steve Arnold <nerdboy@gentoo.org> proj-4.4.7-r1.ebuild,
  proj-4.4.8.ebuild, proj-4.4.9.ebuild:
  bumping x86 and sparc to stable

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

*proj-4.4.8 (28 Dec 2004)

  28 Dec 2004; Olivier Fisette <ribosome@gentoo.org> +metadata.xml,
  +files/proj-4.4.7-gentoo.patch, +proj-4.4.7-r1.ebuild, +proj-4.4.8.ebuild,
  +proj-4.4.9.ebuild:
  Moved from dev-libs/proj to sci-libs/proj.

  15 Dec 2004; Bryan Østergaard <kloeri@gentoo.org> proj-4.4.8.ebuild:
  Stable on alpha.

  12 Dec 2004; Mike Doty <kingtaco@gentoo.org> proj-4.4.9.ebuild:
  stable on amd64
