@@ -1,9 +1,11 @@
 AUX proj-4.6.1-test.patch 1961 RMD160 3fe7439610c3bd63094b1e89ebb0c78f994f3db7 SHA1 11377ddf8d05d1b0a918f16b4f64377dbb50c437 SHA256 e6dc6f022d8dd21d9a9e77cae85f5790c34924fd553104e196bc7e909a845371
 DIST proj-4.6.0.tar.gz 674411 RMD160 f7b138634f7a718f035415b28167b65fdd8020f1 SHA1 972b74922d764f71fb0c01cd3f69255611291368 SHA256 2aec7111d286edb225bb51953f240f391ce74575585a64b4158ebae54b05e127
 DIST proj-4.6.1.tar.gz 686045 RMD160 cfe00371b4013398d6e48b66f3bf1e337ca16647 SHA1 ddfdad6cba28af5f91b14fd6690bd22bbbc79390 SHA256 76d174edd4fdb4c49c1c0ed8308a469216c01e7177a4510b1b303ef3c5f97b47
+DIST proj-4.7.0.tar.gz 684923 RMD160 cd96c09906b99d2ad205cc087e2863910d1124e1 SHA1 bfe59b8dc1ea0c57e1426c37ff2b238fea66acd7 SHA256 fc5440002a496532bfaf423c28bdfaf9e26cc96c84ccefcdefde911efbd98986
 DIST proj-datumgrid-1.3.zip 2114801 RMD160 6eb5381ad661d81abeb9b67c61f5260a2a9c8d26 SHA1 9ae79ad7a769a3943cbbb52ed3e496250b05e82f SHA256 222fb6f599a8ebc99df365ee35cb606c0bba0d8a9b0448f115b07509884a8ee4
 DIST proj-datumgrid-1.4.zip 2250123 RMD160 3ff71d0eae827e75222fc1a13edb0f5dd155387c SHA1 c205a59495fe011e99c070089fe4bfd3ad10fbba SHA256 e7f1d3718cda73cf093916b95d8c3776385229fbcadbf3a1c522dd302795dfee
 EBUILD proj-4.6.0.ebuild 982 RMD160 b8c185f79edcf41e27dff9f9e2869855e6030dfb SHA1 56a1a3c6126cebc68b4e04f37def9852de6dc410 SHA256 d9b1823df93ddbbd75ae6245bce408520d2c178dfc45d55843d1da17f7e01d11
 EBUILD proj-4.6.1.ebuild 1030 RMD160 78532488a6e3565d07e1cef1fa5f45022208cede SHA1 385530556b896e0099372a3c7d7d693d5bea9da8 SHA256 351a870bce52df53b6f89df487f135526520238ad16395381d56089418a2fb54
-MISC ChangeLog 3986 RMD160 01b872c6f5bb0fae1d0c84c0d62b8489887fe1a5 SHA1 ee0368b403cefd5b1c2c227a86f55fa3985964e5 SHA256 75b886e6dc79f0865cc3b1bde603c8053404dc91717cb9710f2bf5f5cce3c4b5
+EBUILD proj-4.7.0.ebuild 1031 RMD160 2687ff5522eb480d2f3bf1a60c84b05879aa8b1e SHA1 135d78a6a1394bc6258cbf6a0a3039a22ce938a2 SHA256 cd26e5aea5e31e5763a13f81e01980c6ba5b9941230cc738f63cdfab9c7c0fb1
+MISC ChangeLog 4115 RMD160 99f911c8b9ecfb047278ab763c0bdf983ac529b4 SHA1 86394721d9a7ec25ebea3cd168f89a383432729e SHA256 0d183722a946f7070b0dab1695cbf251a0c93b03d7a232af0a165b84222252d0
 MISC metadata.xml 442 RMD160 3c26b5b2f96e807ada5c51ac4f2d9f2478e1ddd9 SHA1 3ef6f25969eab83a6b92b38bd8b31253f351286d SHA256 64f19b0331a3d251908e130355c8be99c627c2048e712d52e1c7f0942f49b7de
