@@ -1,6 +1,11 @@
 # ChangeLog for sci-libs/proj
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/proj/ChangeLog,v 1.15 2009/09/23 20:09:36 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/proj/ChangeLog,v 1.16 2009/10/03 20:44:04 patrick Exp $
+
+*proj-4.7.0 (03 Oct 2009)
+
+  03 Oct 2009; Patrick Lauer <patrick@gentoo.org> +proj-4.7.0.ebuild:
+  Bump to 4.7.0, fixes #287570
 
   23 Sep 2009; Patrick Lauer <patrick@gentoo.org> proj-4.4.9.ebuild:
   Remove virtual/libc
